--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-API_KEY=your_api_key_here
-CITY=Berlin
+WEATHER_API_KEY=your_api_key_here
+WEATHER_API_URL=https://www.metaweather.com/api/location/search/?
+DEFAULT_CITY=Berlin
