--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-WEATHER_API_KEY=your_api_key_here
-WEATHER_API_URL=https://www.metaweather.com/api/location/search/?
+API_BASE_URL=https://api.open-meteo.com/v1/
 DEFAULT_CITY=Berlin
